--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
-flask
-flask-cors
-numpy
-pandas
-scikit-learn
-joblib
-lightgbm
-shap
+Flask==2.3.0
+Flask-Cors==4.0.0
+pandas==2.0.0
+numpy==1.24.0
+scikit-learn==1.3.0
+lightgbm==4.0.0
+shap==0.42.0
+joblib==1.3.0
+gunicorn==21.2.0
+requests==2.31.0
+optuna==3.3.0
+xgboost==2.0.0
