--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend API Service
   - type: web
     name: agri-yield-backend
     env: python
@@ -11,3 +12,15 @@ services:
         value: 3.11.0
       - key: PORT
         sync: false
+
+  # Frontend Static Site Service
+  - type: web
+    name: agri-yield-frontend
+    env: static
+    region: oregon
+    plan: free
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/build
+    envVars:
+      - key: NODE_VERSION
+        value: 22.16.0
